--- a/odvideoforlive/Base.lproj/LaunchScreen.storyboard
+++ b/odvideoforlive/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="121.png" translatesAutoresizingMaskIntoConstraints="NO" id="q2R-Iw-A52">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="120.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="q2R-Iw-A52">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
@@ -37,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="121.png" width="1024" height="1024"/>
+        <image name="120.jpg" width="750" height="1334"/>
     </resources>
 </document>
